fix button, align video responsively

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -100,6 +100,13 @@ nav {
   transition: all .25s ease;
 }
 
+button {
+  border: none;
+  background: none;
+  font: inherit;
+  font-size: inherit;
+}
+
 /* * {
   overflow-x: hidden;
 } */
